--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-file-include": "^1.1.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-install": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
@@ -25,5 +26,8 @@
     "serve": "gulp clean && gulp serve",
     "build": "gulp clean && gulp build",
     "production": "gulp clean && gulp production"
+  },
+  "dependencies": {
+    "gulp-install": "^1.1.0"
   }
 }
